@@ -9,6 +9,6 @@ import java.util.List;
 public class Echo implements ICommandHandler {
     @Override
     public Pair<String, DataType> handle(List<String> args) {
-        return new Pair<>(args.getFirst(), DataType.BULK_STRING);
+        return new Pair<>(args.get(0), DataType.BULK_STRING);
     }
 }
